unpackaged/main/default/objects/Project_Participant__c/Project_Participant__c.object-meta.xml
<CustomObject>
    <description>This junction object captures the relationship between an Account and a construction Project. This object also captures the relationship between a &quot;Project Specific Contract&quot;, and the Accounts with Access to the Project Specific Pricing.</description>
    <label>Project Participant</label>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Participant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>