unpackaged/main/default/objects/Project_Participant__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Participants</relationshipLabel>
    <relationshipName>Project_Groups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>