unpackaged/main/default/objects/Project_Participant__c/fields/Account_PowerPass_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_PowerPass_Number__c</fullName>
    <formula>Account__r.Power_Pass_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account PowerPass Number</label>
    <type>Text</type>
</CustomField>