unpackaged/main/default/objects/Project_Participant__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the related Contract.</description>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipName>Project_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>