unpackaged/main/default/objects/Project_Participant__c/fields/Main_Account__c.field-meta.xml
<CustomField>
    <fullName>Main_Account__c</fullName>
    <formula>Project__r.Main_Account__c  =  Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Account</label>
    <type>Checkbox</type>
</CustomField>