unpackaged/main/default/objects/Project_Participant__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>A lookup to the related Project.</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Project_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>