unpackaged/main/default/objects/Project_Participant__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active - Not on Contract</fullName>
                <default>true</default>
                <label>Active - Not on Contract</label>
            </value>
            <value>
                <fullName>Active - On Contract</fullName>
            </value>
            <value>
                <fullName>Request for Contract Addition</fullName>
            </value>
            <value>
                <fullName>Request for Contract Change</fullName>
            </value>
            <value>
                <fullName>Request for Contract Removal</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>.</fullName>
                <isActive>false</isActive>
                <label>.</label>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>On Contract</fullName>
                <isActive>false</isActive>
                <label>On Contract</label>
            </value>
            <value>
                <fullName>Request tor Contract</fullName>
                <isActive>false</isActive>
                <label>Request tor Contract</label>
            </value>
            <value>
                <fullName>Request tor Contract Addition</fullName>
                <isActive>false</isActive>
                <label>Request tor Contract Addition</label>
            </value>
            <value>
                <fullName>Request tor Contract Change</fullName>
                <isActive>false</isActive>
                <label>Request tor Contract Change</label>
            </value>
            <value>
                <fullName>Request tor Contract Removal</fullName>
                <isActive>false</isActive>
                <label>Request tor Contract Removal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>