unpackaged/main/default/objects/Project_Participant__c/validationRules/Status_Restriction_Active_on_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Restriction_Active_on_Contract</fullName>
    <active>true</active>
    <description>Rule to restrict user&#39;s from selction Active on Contract Status</description>
    <errorConditionFormula>NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c, $Profile.Name) )  &amp;&amp;  ISPICKVAL( Status__c ,&#39;Active - On Contract&#39;)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>You do not have the permissions to set the status to Active on Contract.</errorMessage>
</ValidationRule>